@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-04-16T08:38:14Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_prev_day_inc" : 4,
+  "timestamp" : "2022-04-16T16:29:33Z",
+  "count" : 17,
+  "count_minmax" : [ 2, 17 ],
+  "count_prev_day_inc" : 19,
   "count_prev_day_dec" : 0,
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
