@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-04-16T08:38:14Z",
+  "timestamp" : "2022-04-16T16:29:33Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 4,
+  "count" : 19,
   "uniques" : 3,
   "views" : [
     {
@@ -14,8 +14,8 @@
     },
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
+      "count": 17,
+      "count_minmax": [ 2, 17 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
