@@ -1,5 +1,5 @@
 {
-  "count": 4,
+  "count": 19,
   "uniques": 2,
   "views": [
     {
@@ -9,7 +9,7 @@
     },
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 2,
+      "count": 17,
       "uniques": 1
     }
   ]
