@@ -1,5 +1,11 @@
+2022-04-16T16:29:33Z:
+* notice: last 14d: all unq: 19 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 4 3
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 19 3
+* notice: prev json diff // prev day diff: unq all: +0 +15 / -0 -0 // +3 +19 / -0 -0
+
 2022-04-16T08:38:14Z:
 * notice: last 14d: all unq: 4 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 0 0
 * notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 4 3
-* notice: prev json diff // prev day diff: unq all: +3 +4 / -0 -0 // +3 +4 / -0 -0
+* notice: prev json diff // prev day diff: unq all: +3 +4 / -0 -0 // +3 +4 / -0 -0
